# SmartBasket

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  ShopSense_Platform_Plan_v4.md  ShopSense_Platform_Plan_v5.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_flow.py  test_import.py
app/: config.py  database.py  llm.py  main.py  redis_client.py
app/agent/: graph.py  prompts.py  router.py  state.py
app/analytics/: nl_to_sql_admin.py  router.py
app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
app/mcp/: README.md  client.py  server.py
app/orders/: kafka_consumer.py  kafka_producer.py  models.py  router.py  schemas.py  service.py
app/policies/: ingest.py  models.py  retriever.py  router.py
app/products/: kafka.py  models.py  router.py  schemas.py  service.py
app/recommendations/: als_model.py  blending.py  content_based.py  router.py
app/schemas/: llm.py  search.py
app/search/: catalogue_config.py  constraint_extractor.py  embedder.py  hybrid_search.py  kafka_consumer.py  nl_to_sql.py  pricing_engine.py  qdrant_ops.py  query_router.py  reranker.py  router.py
app/users/: models.py  router.py  schemas.py  service.py
data/ingestion/: db_utils.py  fetch_amazon_reviews.py  fetch_bestbuy.py  generate_embeddings.py  generate_synthetic.py  process_amazon_products.py  process_kaggle.py  process_kaggle_laptops.py  run_sentiment.py  seed_postgres.py  smoke_test_embeddings.py  sync_local_from_supabase.py  verify_ingestion.py
data/sample/: synthetic_products.json
data/verification/: search_quality_check.py
database/migrations/: 001_create_users.sql  002_create_products.sql  003_create_reviews.sql  004_create_orders.sql  005_create_price_history.sql  006_create_user_preferences.sql  007_create_nl_sql_audit.sql  008_create_wishlist.sql  009_add_last_login_to_users.sql  010_create_price_alerts.sql  011_create_payment_methods.sql  012_add_order_delivered.sql  015_create_policy_documents.sql  016_create_admin_notifications.sql
database/seeds/: synthetic_products.sql
frontend/: package-lock.json  package.json  vercel.json
frontend/admin/: package.json
frontend/src/: App.tsx
frontend/storefront/: index.html  vite.config.ts
frontend/widget/: package.json  vite.config.ts
infra/nginx/: nginx.conf
infra/terraform/: backend.tf  main.tf  outputs.tf  security_groups.tf  variables.tf
planning/: SmartBasket_Complete_Plan_v2.md
skills/: README.md
skills/code-reviewer/: SKILL.md
skills/coder/: SKILL.md
skills/deployment-agent/: SKILL.md
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260510000001_create_users.sql  20260510000002_create_products.sql  20260510000003_create_reviews.sql  20260510000004_create_orders.sql  20260510000005_create_price_history.sql  20260510000006_create_user_preferences.sql  20260510000007_create_nl_sql_audit.sql  20260510000008_create_wishlist.sql  20260510000009_add_last_login_to_users.sql  20260510000010_create_price_alerts.sql  20260510000011_create_payment_methods.sql  20260510000013_add_product_sentiment.sql  20260510000014_create_user_item_interactions.sql  (+1 more)
tests/: conftest.py
workers/: embedding_worker.py  personalisation_worker.py  recommender_trainer.py  run_scheduled_agents.py  run_workers.py  sentiment_worker.py
(+135 files in other folders)
