[project]
name = "shopsense"
version = "0.1.0"
description = "AI-native product discovery platform for consumer electronics"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database — primary schema via Supabase CLI migrations (database/migrations/)
    # SQLAlchemy for querying; alembic kept as fallback if needed
    "sqlalchemy>=2.0.40",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    # Cache
    "redis>=5.0.6",
    # Vector DB
    "qdrant-client>=1.9.0",
    # Kafka
    "kafka-python>=2.0.2",
    "aiokafka>=0.11.0",
    # AI / LLM — multi-provider gateway (app/llm.py)
    "boto3>=1.34.0",          # Bedrock (prod)
    "groq>=0.9.0",            # Groq / LLaMA (dev default)
    "google-genai>=1.0.0",    # Gemini (dev alt)
    # LangChain / LangGraph — agent orchestration
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    # Observability
    "langsmith>=0.1.0",
    # Search utilities
    "sqlparse>=0.5.0",
    "flashrank>=0.2.0",
    # HTTP client
    "httpx>=0.27.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # External services (Phase 1 tool calling)
    "sendgrid>=6.11.0",
    "stripe>=10.0.0",
    # Email validation
    "email-validator>=2.1.0",
    # Data ingestion utilities
    "faker>=25.0.0",
    "python-dotenv>=1.0.0",
    # ETL pipeline
    "datasets>=2.20.0",          # HuggingFace datasets (streaming H&M catalogue)
    "apscheduler>=3.10.0",       # Scheduled agents
    "greenlet>=3.5.1",
    "anthropic>=0.105.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio[trio]>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "moto[bedrock]>=5.0.0",
]

[tool.uv]
# onnxruntime dropped Intel Mac (x86_64) wheels at 1.20.0.
# flashrank pulls it in; pin to the last version with macOS x86_64 support.
# arm64 (Apple Silicon) uses the latest available wheel.
override-dependencies = [
    "onnxruntime==1.19.2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "onnxruntime>=1.17.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "workers"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing -v -p no:faker -p no:langsmith_plugin"
markers = [
    "integration: marks tests that hit live external services (Bedrock, Qdrant, Redis). Run with: pytest -m integration",
]

[tool.coverage.run]
omit = ["tests/*", "data/*", "workers/*"]
